--- a/config.env
+++ b/config.env
@@ -1,5 +1,5 @@
 NODE_ENV = development
 PORT = 3000
 
-DATABASE= mongodb+srv://IShant:<PASSWORD>@cluster0-ii9jf.mongodb.net/natours?retryWrites=true&w=majority
-PASSWORD  = 8nEEBOUcgSrtzLxy
+DATABASE= mongodb+srv://ISHANT:<PASSWORD>@cluster0.rx8jx.mongodb.net/test?authSource=admin&replicaSet=atlas-padjpz-shard-0&readPreference=primary&appname=MongoDB%20Compass&ssl=true
+PASSWORD= 8nEEBOUcgSrtzLxy
