--- a/config.env
+++ b/config.env
@@ -1,4 +1,4 @@
-NODE_ENV =production
+NODE_ENV =development
 PORT = 3000
 
 DATABASE= mongodb+srv://ISHANT:<PASSWORD>@cluster0.rx8jx.mongodb.net/test?authSource=admin&replicaSet=atlas-padjpz-shard-0&readPreference=primary&appname=MongoDB%20Compass&ssl=true
