Refractor and JWT

--- a/config.env
+++ b/config.env
@@ -1,5 +1,8 @@
-NODE_ENV =development
+NODE_ENV =production
 PORT = 3000
 
 DATABASE= mongodb+srv://ISHANT:<PASSWORD>@cluster0.rx8jx.mongodb.net/test?authSource=admin&replicaSet=atlas-padjpz-shard-0&readPreference=primary&appname=MongoDB%20Compass&ssl=true
 PASSWORD= 8nEEBOUcgSrtzLxy
+
+JWT_SECRET=noob-olympics-will-be-best-event
+JWT_EXPIRES_IN=90d
